--- a/arch/arm/configs/exynos4_defconfig
+++ b/arch/arm/configs/exynos4_defconfig
@@ -65,6 +65,9 @@ CONFIG_I2C=y
 CONFIG_I2C_S3C2410=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_HWMON is not set
+CONFIG_THERMAL=y
+CONFIG_CPU_THERMAL=y
+CONFIG_SENSORS_EXYNOS4_TMU=y
 CONFIG_MFD_MAX8997=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_DUMMY=y
