--- a/arch/arm/configs/omap4_defconfig
+++ b/arch/arm/configs/omap4_defconfig
@@ -230,6 +230,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_OMAP_SOC=y
 CONFIG_SND_OMAP_SOC_SDP4430=y
 CONFIG_SND_OMAP_SOC_OMAP4_HDMI=y
+CONFIG_SND_OMAP_SOC_OMAP_ABE_TWL6040=y 
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICEFS=y
