--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -132,4 +132,6 @@ source "drivers/staging/thermal_framework/Kconfig"
 
 source "drivers/staging/telephony/Kconfig"
 
+source "drivers/staging/ramster/Kconfig"
+
 endif # STAGING
