--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -130,4 +130,6 @@ source "drivers/staging/android/Kconfig"
 
 source "drivers/staging/thermal_framework/Kconfig"
 
+source "drivers/staging/telephony/Kconfig"
+
 endif # STAGING
