--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -23,6 +23,7 @@ CONFIG_ARCH_OMAP=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_OMAP5_SEVM_PALMAS=y
 CONFIG_OMAP_MUX_DEBUG=y
+# CONFIG_OMAP_MCBSP is not set
 CONFIG_OMAP_SCM_DEV=y
 CONFIG_OMAP_MBOX_FWK=y
 # CONFIG_ARCH_OMAP2 is not set
@@ -64,12 +65,22 @@ CONFIG_TCP_CONG_ADVANCED=y
 # CONFIG_TCP_CONG_WESTWOOD is not set
 # CONFIG_TCP_CONG_HTCP is not set
 CONFIG_IPV6=y
+CONFIG_BT=m
+CONFIG_BT_RFCOMM=m
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=m
+CONFIG_BT_HIDP=m
+CONFIG_BT_WILINK=m
 CONFIG_CFG80211=m
 CONFIG_NL80211_TESTMODE=y
 CONFIG_LIB80211=m
 CONFIG_MAC80211=m
 CONFIG_MAC80211_LEDS=y
 CONFIG_MAC80211_DEBUGFS=y
+CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_REGULATOR=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -81,6 +92,7 @@ CONFIG_BMP085=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_ATA=y
 # CONFIG_SATA_PMP is not set
+CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_NETDEVICES=y
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC95XX=y
@@ -92,7 +104,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_OMAP4=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_QUANTUM_OBP=y
+CONFIG_TOUCHSCREEN_QUANTUM_OBP=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_TSL2771=m
 CONFIG_INPUT_PALMAS_PWRBUTTON=y
@@ -148,10 +160,17 @@ CONFIG_SND_OMAP_SOC=y
 CONFIG_HIDRAW=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB=y
-CONFIG_USB_DEBUG=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_DWC3=m
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_MUSB_HDRC=m
+CONFIG_USB_MUSB_OMAP2PLUS=m
 CONFIG_USB_STORAGE=y
+CONFIG_USB_GADGET=m
+CONFIG_USB_OMAP=m
+CONFIG_USB_GADGET_MUSB_HDRC=m
+CONFIG_USB_ZERO=m
+CONFIG_USB_MASS_STORAGE=m
 CONFIG_TWL4030_USB=y
 CONFIG_TWL6030_USB=y
 CONFIG_MMC=y
@@ -165,7 +184,6 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_TWL4030=y
 CONFIG_STAGING=y
 CONFIG_DRM_OMAP=y
-CONFIG_DRM_OMAP_NUM_CRTCS=1
 CONFIG_THERMAL_FRAMEWORK=y
 CONFIG_OMAP_THERMAL=y
 CONFIG_OMAP_DIE_GOVERNOR=y
@@ -210,12 +228,13 @@ CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_LL=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_CRYPTO_CBC=y
-CONFIG_CRYPTO_ECB=m
+CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_PCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRC_CCITT=y
