thermal: Add generic cpu cooling implementation
This patch adds support for generic cpu thermal cooling low level
implementations using frequency scaling and cpuhotplugg currently.
Different cpu related cooling devices can be registered by the
user and the binding of these cooling devices to the corresponding
trip points can be easily done as the registration API's return the
cooling device pointer.

Signed-off-by: Amit Daniel Kachhap <amit.kachhap@linaro.org>

--- a/drivers/thermal/Makefile
+++ b/drivers/thermal/Makefile
@@ -3,3 +3,5 @@
 #
 
 obj-$(CONFIG_THERMAL)		+= thermal_sys.o
+obj-$(CONFIG_THERMAL_FREQ)	+= thermal_freq.o
+obj-$(CONFIG_CPU_THERMAL)	+= cpu_cooling.o
