--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -29,7 +29,7 @@ config SPEAR_THERMAL
 
 config CPU_THERMAL
 	bool "generic cpu cooling support"
-	depends on THERMAL && CPU_FREQ
+	depends on THERMAL && CPU_FREQ && HOTPLUG_CPU
 	help
 	  This implements the generic cpu cooling mechanism through frequency
 	  reduction, cpu hotplug and any other ways of reducing temperature. An
