--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -88,6 +88,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=16384
 CONFIG_BMP085=m
+CONFIG_TI_ST=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_ATA=y
 # CONFIG_SATA_PMP is not set
@@ -95,9 +96,10 @@ CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_NETDEVICES=y
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC95XX=y
-CONFIG_WL12XX_MENU=m
+CONFIG_WL_TI=y
 CONFIG_WL12XX=m
-CONFIG_WL12XX_SDIO=m
+CONFIG_WL18XX=m
+CONFIG_WLCORE_SDIO=m
 # CONFIG_INPUT_MOUSEDEV is not set
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_OMAP4=y
@@ -139,6 +141,7 @@ CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_OMAP2_VRAM_SIZE=16
 CONFIG_OMAP2_DSS_COLLECT_IRQ_STATS=y
+CONFIG_OMAP2_DSS_RFBI=y
 CONFIG_OMAP2_DSS_DSI=y
 CONFIG_PANEL_GENERIC_DPI=y
 CONFIG_PANEL_DVI=y
