config enable omap4 and omap5 caamera
Signed-off-by: Andy Green <andy.green@linaro.org>

--- a/arch/arm/configs/omap4_defconfig
+++ b/arch/arm/configs/omap4_defconfig
@@ -32,6 +32,7 @@ CONFIG_OMAP_SMARTREFLEX_CLASS3=y
 CONFIG_OMAP_MUX_DEBUG=y
 # CONFIG_ARCH_OMAP2 is not set
 # CONFIG_ARCH_OMAP3 is not set
+CONFIG_MACH_OMAP4_PANDA_CAMERA_SUPPORT=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -172,8 +173,6 @@ CONFIG_REGULATOR_DUMMY=y
 CONFIG_REGULATOR_TWL4030=y
 CONFIG_REGULATOR_TPS65023=y
 CONFIG_REGULATOR_TPS6507X=y
-CONFIG_MEDIA_SUPPORT=y
-CONFIG_VIDEO_DEV=y
 # CONFIG_MEDIA_TUNER_SIMPLE is not set
 # CONFIG_MEDIA_TUNER_TDA8290 is not set
 # CONFIG_MEDIA_TUNER_TDA827X is not set
@@ -194,6 +193,8 @@ CONFIG_VIDEO_DEV=y
 # CONFIG_MEDIA_TUNER_MAX2165 is not set
 # CONFIG_MEDIA_TUNER_TDA18218 is not set
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
+CONFIG_VIDEO_OV5640=y
+CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_RADIO_WL1273=m
 CONFIG_RADIO_WL128X=y
 CONFIG_FB=y
