--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -31,6 +31,7 @@ CONFIG_ARCH_OMAP5=y
 # CONFIG_MACH_OMAP_4430SDP is not set
 CONFIG_MACH_OMAP5_SEVM=y
 CONFIG_SECURE_REGS=y
+CONFIG_MACH_OMAP4_PANDA_CAMERA_SUPPORT=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_PL310_ERRATA_753970=y
 CONFIG_PL310_ERRATA_769419=y
@@ -136,6 +137,13 @@ CONFIG_MFD_PALMAS_RESOURCE=y
 CONFIG_REGULATOR_DUMMY=y
 CONFIG_REGULATOR_TWL4030=y
 CONFIG_REGULATOR_PALMAS=y
+# CONFIG_RC_CORE is not set
+# CONFIG_MEDIA_TUNER_CUSTOMISE is not set
+CONFIG_VIDEO_OMAP4_DEBUG=y
+CONFIG_SOC_CAMERA=y
+CONFIG_SOC_CAMERA_PLATFORM=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+# CONFIG_RADIO_ADAPTERS is not set
 CONFIG_DRM=y
 CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_MODE_HELPERS=y
