--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -933,7 +933,7 @@ config VIDEO_OMAP3_DEBUG
 
 config VIDEO_OMAP4
 	tristate "OMAP 4 Camera support (EXPERIMENTAL)"
-	depends on VIDEO_V4L2 && I2C && VIDEO_V4L2_SUBDEV_API && ARCH_OMAP4 && EXPERIMENTAL
+	depends on VIDEO_V4L2 && I2C && VIDEO_V4L2_SUBDEV_API && (ARCH_OMAP4 || ARCH_OMAP5) && EXPERIMENTAL
 	select VIDEOBUF2_DMA_CONTIG
 	---help---
 	  Driver for an OMAP 4 ISS controller.
