Add CPU_THERMAL driver for OMAP4460
Add code to connect the OMAP4460 bandgap temperature sensor to the new generic
thermal CPU throttling code.

Signed-off-by: David A. Long <dave.long@linaro.org>

--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -33,3 +33,11 @@ config CPU_THERMAL
 	  This will be useful for platforms using the generic thermal interface
 	  and not the ACPI interface.
 	  If you want this support, you should say Y or M here.
+
+config OMAP_THERMAL_INTERFACE
+	bool "TI OMAP Thermal interface support"
+	depends on THERMAL && CPU_THERMAL
+	help
+	  This is a OMAP thermal interface which will be used as
+	  a link between sensors and cooling devices with linux thermal
+	  framework.
