--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -24,7 +24,6 @@ CONFIG_GPIO_PCA953X=y
 CONFIG_OMAP5_SEVM_PALMAS=y
 CONFIG_OMAP_MUX_DEBUG=y
 CONFIG_OMAP_SCM_DEV=y
-CONFIG_OMAP_MBOX_FWK=y
 # CONFIG_ARCH_OMAP2 is not set
 # CONFIG_ARCH_OMAP3 is not set
 CONFIG_ARCH_OMAP5=y
@@ -198,16 +197,21 @@ CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_TWL4030=y
+CONFIG_VIRTIO_MMIO=y
 CONFIG_STAGING=y
 CONFIG_DRM_OMAP=y
 CONFIG_THERMAL_FRAMEWORK=y
 CONFIG_OMAP_THERMAL=y
 CONFIG_OMAP_DIE_GOVERNOR=y
 CONFIG_OMAP_GPU_GOVERNOR=y
+CONFIG_DRM_OMAP_DCE=m
 CONFIG_HWSPINLOCK_OMAP=y
 CONFIG_STM_FW=y
 CONFIG_STM_OMAP_TI1_0=y
+CONFIG_OMAP_IOVMM=y
+CONFIG_OMAP_REMOTEPROC=y
 CONFIG_OMAP_REMOTEPROC_DSP=y
+CONFIG_VIRT_DRIVERS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
