--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -15,7 +15,7 @@ config REMOTEPROC_INACTIVITY_TIMEOUT
 
 config OMAP_REMOTEPROC
 	tristate "OMAP remoteproc support"
-	depends on ARCH_OMAP4
+	depends on ARCH_OMAP4 || ARCH_OMAP5
 	select OMAP_IOMMU
 	select REMOTEPROC
 	select OMAP_MBOX_FWK
