--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -207,6 +207,7 @@ CONFIG_OMAP_GPU_GOVERNOR=y
 CONFIG_HWSPINLOCK_OMAP=y
 CONFIG_STM_FW=y
 CONFIG_STM_OMAP_TI1_0=y
+CONFIG_OMAP_REMOTEPROC_DSP=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
