--- a/arch/arm/configs/exynos4_defconfig
+++ b/arch/arm/configs/exynos4_defconfig
@@ -91,6 +91,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_SAMSUNG_S5P_G2D=y
 CONFIG_VIDEO_SAMSUNG_S5P_JPEG=y
 CONFIG_VIDEO_SAMSUNG_S5P_MFC=y
+CONFIG_USING_PMM=y
 CONFIG_FB=y
 CONFIG_FB_S3C=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
