--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1316,7 +1316,7 @@ config PROFILING
 # dynamically changed for a probe function.
 #
 config TRACEPOINTS
-	bool
+	bool "Tracepoints support"
 
 source "arch/Kconfig"
 
