--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -141,6 +141,9 @@ CONFIG_FB_MODE_HELPERS=y
 CONFIG_OMAP2_VRAM_SIZE=16
 CONFIG_OMAP2_DSS_COLLECT_IRQ_STATS=y
 CONFIG_OMAP2_DSS_DSI=y
+CONFIG_PANEL_GENERIC_DPI=y
+CONFIG_PANEL_DVI=y
+CONFIG_PANEL_TC358766XBG=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
