--- a/arch/arm/configs/android_origen_defconfig
+++ b/arch/arm/configs/android_origen_defconfig
@@ -1725,6 +1725,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_S3C=y
+CONFIG_FB_S3C_NR_BUFFERS=2
 # CONFIG_FB_S3C_DEBUG_REGWRITE is not set
 # CONFIG_FB_SMSCUFX is not set
 # CONFIG_FB_UDL is not set
