config: android_origen: Disabled low-level debugging and early printk
Change-Id: I47811cb7392620050655bec00794fd9cdb8e7037
Signed-off-by: Annamalai Lakshmanan <annamalai.lakshmanan@linaro.org>

--- a/arch/arm/configs/android_origen_defconfig
+++ b/arch/arm/configs/android_origen_defconfig
@@ -2483,13 +2483,13 @@ CONFIG_ARM_UNWIND=y
 CONFIG_OLD_MCOUNT=y
 CONFIG_DEBUG_USER=y
 # CONFIG_DEBUG_RODATA is not set
-CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_LL=n
 # CONFIG_DEBUG_S3C_UART0 is not set
 # CONFIG_DEBUG_S3C_UART1 is not set
 CONFIG_DEBUG_S3C_UART2=y
 # CONFIG_DEBUG_LL_UART_NONE is not set
 # CONFIG_DEBUG_ICEDCC is not set
-CONFIG_EARLY_PRINTK=y
+CONFIG_EARLY_PRINTK=n
 # CONFIG_OC_ETM is not set
 
 #
