config: android_origen: Enabled power supply in defconfig
Change-Id: Ib2ddf20756e089b726af774cbc5024e7b42b0488
Signed-off-by: Annamalai Lakshmanan <annamalai.lakshmanan@linaro.org>

--- a/arch/arm/configs/android_origen_defconfig
+++ b/arch/arm/configs/android_origen_defconfig
@@ -1310,7 +1310,7 @@ CONFIG_GPIOLIB=y
 # MODULbus GPIO expanders:
 #
 # CONFIG_W1 is not set
-# CONFIG_POWER_SUPPLY is not set
+CONFIG_POWER_SUPPLY=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
