--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2057,6 +2057,15 @@ config FB_S3C
 
 	  Currently the support is only for the S3C6400 and S3C6410 SoCs.
 
+config FB_S3C_NR_BUFFERS
+        int "Number of frame buffers (1-3)"
+        depends on FB_S3C
+        default "1"
+        help
+          This indicates the number of buffers for pan display,
+          1 means no pan display and
+          2 means the double size of video buffer will be allocated for default window
+
 config FB_S3C_DEBUG_REGWRITE
        bool "Debug register writes"
        depends on FB_S3C
