WIP: add DCE plugin..
Conflicts:

	drivers/staging/Kconfig
	drivers/staging/Makefile

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -136,4 +136,6 @@ source "drivers/staging/ramster/Kconfig"
 
 source "drivers/staging/ozwpan/Kconfig"
 
+source "drivers/staging/omapdce/Kconfig"
+
 endif # STAGING
