--- a/arch/arm/configs/omap_5430evm_defconfig
+++ b/arch/arm/configs/omap_5430evm_defconfig
@@ -206,12 +206,12 @@ CONFIG_OMAP_DIE_GOVERNOR=y
 CONFIG_OMAP_GPU_GOVERNOR=y
 CONFIG_DRM_OMAP_DCE=m
 CONFIG_HWSPINLOCK_OMAP=y
-CONFIG_STM_FW=y
-CONFIG_STM_OMAP_TI1_0=y
 CONFIG_OMAP_IOVMM=y
 CONFIG_OMAP_REMOTEPROC=y
 CONFIG_OMAP_REMOTEPROC_DSP=y
 CONFIG_VIRT_DRIVERS=y
+CONFIG_STM_FW=y
+CONFIG_STM_OMAP_TI1_0=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
@@ -240,13 +240,13 @@ CONFIG_PRINTK_TIME=y
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 # CONFIG_ENABLE_MUST_CHECK is not set
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_FS=y
 CONFIG_DETECT_HUNG_TASK=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DEBUG_INFO=y
-# CONFIG_FTRACE is not set
+# CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
+CONFIG_FUNCTION_TRACER=y
 # CONFIG_ARM_UNWIND is not set
 CONFIG_DEBUG_LL=y
 CONFIG_EARLY_PRINTK=y
